--- a/homepg.html
+++ b/homepg.html
@@ -514,7 +514,7 @@
                 <div class="grid">
                  <div class="container">
                      <a href="https://www.thehindubusinessline.com/companies/zoomcar-raises-30-million-as-part-of-its-100-million-ongoing-series-d-fund-raise-plans/article30613104.ece"
-                       target="_blank" title="Hindu Business Line" class="icon01"><img src="images/The-Business-Line.png"/></a>
+                       target="_blank" title="Hindu Business Line" class="icon01"><img src="img/The-Business-Line.png"/></a>
                  </div>
                 <div class="container">
                 <a href="https://www.livemint.com/companies/start-ups/zoomcar-is-now-back-in-bengaluru-hyderabad-other-cities-with-new-offers-11590481609351.html" target="_blank"
