--- a/homepg.html
+++ b/homepg.html
@@ -22,7 +22,7 @@
           <li class="item hov">
             <a href="#">SUBSCRIPTION</a>
             <div class="details" id="sub_det_item">
-              <div class="arrow"></div>
+              <div class="arrowmiddle"></div>
               <div class="subscr_detail">
                 <span class="subscr-logo1"></span>
                 <p>Hassle-free way of getting your personal car for flexible long term duration. You also have an option
@@ -34,7 +34,7 @@
           </li>
           <li class="item"><a href="#">AMIGO</a>
             <div class="details2">
-              <div class="arrow2"></div>
+              <div class="arrowmiddle2"></div>
               <div class="amigo_detail">
                 <span class="amigo-logo2"></span>
                 <p>A unique Community Vehicle Pooling program that allows you to share your car with your community and
@@ -45,7 +45,7 @@
           </li>
           <li class="item"><a href="#">ZMS</a>
             <div class="details3">
-              <div class="arrow3"></div>
+              <div class="arrowmiddle3"></div>
               <div class="zms_detail">
                 <span class="zms-logo3"></span>
                 <p>Connected technology offerings and shared mobility solutions for businesses worldwide.</p>
@@ -55,7 +55,7 @@
           </li>
           <li class="item"><a href="#">MOBILE APP
               <div class="mob_det">
-                <div class="arrow4"></div>
+                <div class="arrowmiddle4"></div>
                 <div class="details4">
                   <a href="https://play.google.com/store/apps/details?id=com.zoomcar&referrer=utm_source%3Dhome%2520page%26utm_medium%3Dheader%2520links%26utm_content%3Dandroid%26utm_campaign%3Dinstalls"
                     class="mob_anc">
