--- a/homepg.html
+++ b/homepg.html
@@ -82,21 +82,21 @@
           <h1 class="firstline">DRIVE IN A SANITIZED ZOOMCAR</h1>
           <h3 class="subhead">
             Self Drive Car Rental in
-            <select name="city" id="city">
+            <select name="city" id="city" onchange="checkCity()">
               <option value="select">City</option>
-              <option value="bangalore">Bangalore</option>
-              <option value="chandigarh">Chandigarh</option>
-              <option value="hydrabad">Hyderabad</option>
-              <option value="kolkata">Kolkata</option>
-              <option value="mumbai">Mumbai</option>
-              <option value="delhi">Delhi</option>
-              <option value="chennai">Chennai</option>
-              <option value="vadodara">Vadodara</option>
-              <option value="pune">Pune</option>
+              <option value="Bangalore">Bangalore</option>
+              <option value="Chandigarh">Chandigarh</option>
+              <option value="Hyderabad">Hyderabad</option>
+              <option value="Kolkata">Kolkata</option>
+              <option value="Mumbai">Mumbai</option>
+              <option value="Delhi">Delhi</option>
+              <option value="Chennai">Chennai</option>
+              <option value="Vadodara">Vadodara</option>
+              <option value="Pune">Pune</option>
             </select>
           </h3>
           <div id="journey">
-            <a href="#">Start your wonderful journey <img src="img/next.png" alt="" />
+            <a href="search.html">Start your wonderful journey <img src="img/next.png" alt="" />
             </a>
           </div>
         </div>
