sign up part working changes

--- a/homepg.html
+++ b/homepg.html
@@ -101,24 +101,12 @@
           </div>
         </div>
       </div>
+
+
+                                                <!-- SIGNUP POPUP -->
       <div id="pop1">
         <div class="log_in_cont">
           <div class="close1">+</div>
-          <!-- <div id="zoomPromo">
-              <div class="zc_1">
-                <img src="img/promo-3.fuel.png" alt=""/>
-              </div>
-              <h2 id="sl1">Free Fuel</h2>
-              <p id="sl2">
-                  The fuel is on us for your complete trip. In case you re-fuel a
-                  zoomcar, we will re-fill your pockets and that’s a promise.
-              </p>
-              <div id="bullet_slider">
-              <input type="radio" name="radio-btn" id="radio1">
-              <input type="radio" name="radio-btn" id="radio2">
-              <input type="radio" name="radio-btn" id="radio3">
-              </div>
-            </div> -->
           <!-- div slider started  -->
           <div class="slider">
             <div class="slides">
@@ -196,13 +184,106 @@
             <div class="log_r_bot">
               <input type="text" placeholder="Enter your E-mail or Mobile number" class="log_input_email_mob">
               <div class="log_r_bot_btn">
-                <button class="btn_log_sub"></button>
+                <button class="btn_log_sub"  onclick="signinacc(event)"></button>
               </div>
 
             </div>
           </div>
         </div>
       </div>
+
+                                                  <!-- LOGIN POPUP -->
+      <div id="pop2">
+        <div class="log_in_cont2">
+          <div class="close12">+</div>
+          <!-- div slider started  -->
+          <div class="slider22">
+            <div class="slides22">
+
+              <input type="radio" name="radio-btn2" id="radio12">
+              <input type="radio" name="radio-btn2" id="radio22">
+              <input type="radio" name="radio-btn2" id="radio32">
+
+
+              <div class="slide22 first2">
+                <div id="zoomPromo12">
+                  <div class="zc_12">
+                    <img src="img/promo-3.fuel.png" alt="" />
+                  </div>
+                  <h2>Free Fuel</h2>
+                  <p>
+                    The fuel is on us for your complete trip. In case you re-fuel a
+                    zoomcar, we will re-fill your pockets and that’s a promise.
+                  </p>
+                </div>
+              </div>
+
+              <div class="slide22">
+                <div id="zoomPromo22">
+                  <div class="zc_12">
+                    <img src="img/super_log-removebg-preview.png" alt="" />
+                  </div>
+                  <h2>Supermiler Club</h2>
+                  <p>
+                    Premium club which rewards you everytime you drive with us.
+                  </p>
+                </div>
+              </div>
+              <div class="slide22">
+                <div id="zoomPromo32">
+                  <div class="zc_12">
+                    <img src="img/pro1.png" alt="" />
+                  </div>
+                  <h2>Refer &amp; Earn</h2>
+                  <p>
+                    Refer or invite your friends to zoomcar and earn free rides, free Z points and more.
+                  </p>
+                </div>
+              </div>
+
+
+              <div class="navigation_auto2">
+                <div class="auto-btn12"></div>
+                <div class="auto-btn22"></div>
+                <div class="auto-btn32"></div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="log_right2">
+            <div class="log_r_top2">
+              <div class="log_r_top_logo2">
+                <img src="img/zoom-logo-color.png" alt="">
+              </div>
+              <div class="log_r_top_cont2">
+                <label for="">Continue with your</label>
+                <a
+                  href="https://www.facebook.com/login.php?skip_api_login=1&api_key=194504380711275&kid_directed_site=0&app_id=194504380711275&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fv2.8%2Fdialog%2Foauth%3Fapp_id%3D194504380711275%26cbt%3D1622385494561%26channel_url%3Dhttps%253A%252F%252Fstaticxx.facebook.com%252Fx%252Fconnect%252Fxd_arbiter%252F%253Fversion%253D46%2523cb%253Dfd7eb5e6eafb3%2526domain%253Dwww.zoomcar.com%2526origin%253Dhttps%25253A%25252F%25252Fwww.zoomcar.com%25252Ff2bf161617a4c58%2526relation%253Dopener%26client_id%3D194504380711275%26display%3Dpopup%26domain%3Dwww.zoomcar.com%26e2e%3D%257B%257D%26fallback_redirect_uri%3Dhttps%253A%252F%252Fwww.zoomcar.com%252Fmumbai%252F%26fx_app%3Dfacebook%26locale%3Den_US%26logger_id%3Df27e55aa28e60e4%26origin%3D1%26redirect_uri%3Dhttps%253A%252F%252Fstaticxx.facebook.com%252Fx%252Fconnect%252Fxd_arbiter%252F%253Fversion%253D46%2523cb%253Df52f349df35ed%2526domain%253Dwww.zoomcar.com%2526origin%253Dhttps%25253A%25252F%25252Fwww.zoomcar.com%25252Ff2bf161617a4c58%2526relation%253Dopener%2526frame%253Df1a91b53ea2eb04%26response_type%3Dtoken%252Csigned_request%252Cgraph_domain%26scope%3Dpublic_profile%252Cemail%26sdk%3Djoey%26version%3Dv2.8%26ret%3Dlogin%26fbapp_pres%3D0%26tp%3Dunspecified&cancel_url=https%3A%2F%2Fstaticxx.facebook.com%2Fx%2Fconnect%2Fxd_arbiter%2F%3Fversion%3D46%23cb%3Df52f349df35ed%26domain%3Dwww.zoomcar.com%26origin%3Dhttps%253A%252F%252Fwww.zoomcar.com%252Ff2bf161617a4c58%26relation%3Dopener%26frame%3Df1a91b53ea2eb04%26error%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied&display=popup&locale=mr_IN&pl_dbl=0">
+                  <div class="log_r_top_cont_face2">Facebook</div>
+                </a>
+
+                <a
+                  href="https://accounts.google.com/o/oauth2/auth/oauthchooseaccount?redirect_uri=storagerelay%3A%2F%2Fhttps%2Fwww.zoomcar.com%3Fid%3Dauth976566&response_type=permission%20id_token&scope=email%20profile%20openid&openid.realm&client_id=1022741829589-ms1t8peh8j5iahb23ct46ma8uvicc7lc.apps.googleusercontent.com&ss_domain=https%3A%2F%2Fwww.zoomcar.com&fetch_basic_profile=true&gsiwebsdk=2&flowName=GeneralOAuthFlow">
+                  <div class="log_r_top_cont_gmail2">Gmail</div>
+                </a>
+
+              </div>
+            </div>
+            <div class="log_r_bot2">
+              <input type="text" placeholder="Enter your E-mail or Mobile number" class="log_input_email_mob2">
+              <div class="log_r_bot_btn2">
+                <button class="btn_log_sub2" onclick="loginacc(event)"></button>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
       <div id="zoom_adv">
         <div id="adv_head">
           <h2>THE ZOOM CAR ADVANTAGE</h2>
