--- a/homepg.html
+++ b/homepg.html
@@ -19,7 +19,7 @@
           <a href="#"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
         </div>
         <ul id="nav_ul">
-          <li class="item"><a href="#">OFFERS</a></li>
+          <li class="item"><a href="offers.html">OFFERS</a></li>
           <li class="item hov">
             <a href="#">SUBSCRIPTION</a>
             <div class="details" id="sub_det_item">
