--- a/ser_2.html
+++ b/ser_2.html
@@ -449,5 +449,6 @@ input[type=time]::-webkit-datetime-edit-ampm-field {
 
     function gotopage3(){
         window.location.href="ser_3.html"
+        // LOCAL STORAGE NAMES //pick_up_time & //pick_up_date
     }
 </script>
