--- a/ser_3.html
+++ b/ser_3.html
@@ -474,6 +474,7 @@
 
     function gotopageBook(){
         window.location.href="final_book.html"
+        // LOCAL STORAGE NAMES //drop_time & //drop_date
     }
 </script>
 
