L.S. minor change in ser_3

--- a/ser_3.html
+++ b/ser_3.html
@@ -421,7 +421,7 @@
    let re3=document.getElementById("date_dis2").innerText;
 
    let re=re2+re3;
-   localStorage.setItem("pick_up_date",JSON.stringify(re))
+   localStorage.setItem("drop_date",JSON.stringify(re))
    }
    
    let months2=document.getElementById("mon_dis2");
