proper funtion booking html

--- a/ser_3.html
+++ b/ser_3.html
@@ -473,7 +473,7 @@
 
 
     function gotopageBook(){
-        window.location.href="final_book.html"
+        window.location.href="bookingPage(4).html"
         // LOCAL STORAGE NAMES //drop_time & //drop_date
     }
 </script>
