offer page responsiveness

--- a/offers.html
+++ b/offers.html
@@ -824,9 +824,6 @@ body {
   font-size: 18px;
   width: 1200px;
   margin: auto;
-  background-color: black;
- 
-  
 }
 #last .footer .Button button {
   width: 300px;
@@ -975,6 +972,55 @@ body {
   font-weight: 700;
   font-size: 30px;
   font-family: sans-serif;
+}
+@media only screen and (max-width: 900px) {
+  #last .footer .cities {
+    width: 500px;
+    margin: auto;
+    grid-template-columns: 250px 250px;
+    grid-template-rows: auto auto auto;
+  }
+  #last .footer .aboutus {
+    width: 500px;
+    margin: auto;
+    grid-template-columns: 250px 250px;
+    grid-template-rows: auto auto auto;
+  }
+  #last .footer .airport {
+    width: 500px;
+    margin: auto;
+    grid-template-columns: 250px 250px;
+    grid-template-rows: auto auto auto;
+    grid-gap: 20px 90px;
+  }
+  #last .footer .address {
+    width: 650px;
+  }
+  .content {
+    margin: auto;
+  }
+  .contentInc {
+    width: 750px;
+  }
+  #last .footer .Button {
+    grid-template-columns: 210px 210px;
+    grid-template-rows: auto;
+    font-size: 10px;
+    width: 420px;
+    margin: auto;
+  }#last .footer .Button button p {
+  font-size: 13px;
+  }#last .footer .Button button {
+    margin: 0%;
+    padding: 0%;
+    width: 210px;
+  }
+  #hr_line{
+    width: 740px;
+  }
+  #last{
+    margin-top: 500px;
+  }
 }
 
 @media only screen and (max-width: 800px) {
