--- a/payment.html
+++ b/payment.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/15707e82f8.js" crossorigin="anonymous"></script>
-    <title>OFFERS</title>
+    <title>PAYMENT</title>
     <style>
         body {
             margin: 0%;
@@ -1330,7 +1330,7 @@
     <div id="offers">
         <nav id="navbar">
             <div id="logo">
-                <a href="#"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
+                <a href="homepg.html"><img src="img/logo-f38397447048ccba047af6980364e92e.svg" alt="Zoom_Car" /></a>
             </div>
             <ul id="nav_ul">
                 <li class="item hov">
@@ -2152,7 +2152,7 @@
     }
 
     function logoutFunc() {
-        window.location.href = "offers.html";
+        window.location.href = "payment.html";
     }
 
     //auto_slider
