--- a/summarypg.html
+++ b/summarypg.html
@@ -1869,7 +1869,7 @@ function show_dr_box() {
 }
 
 function logoutFunc() {
-  window.location.href = "offers.html";
+  window.location.href = "summarypg.html";
 }
 
 //auto_slider
